fixing dark mode

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -34,7 +34,7 @@
         grid-column: 3/4;
         grid-row: auto;
         position: absolute;
-        top: 130px;
+        top: 142px;
         left: 850px;
         max-width:fit-content;
         max-height: fit-content;
